gl_ext_api.h


typedef char GLbyte;

typedef char GLchar;

typedef double GLdouble;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef int32_t GLint64;

typedef signed int GLintptr;

typedef signed int GLsizeiptr;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;

void GetBooleani_v(GLenum, GLuint, GLboolean *);

void GetIntegeri_v(GLenum, GLuint, GLint *);

void Enablei(GLenum, GLuint);

void Disablei(GLenum, GLuint);

GLboolean IsEnabledi(GLenum, GLuint);

void BeginTransformFeedback(GLenum);

void EndTransformFeedback(void);

void BindBufferRange(GLenum, GLuint, GLuint, GLintptr, GLsizeiptr);

void BindBufferBase(GLenum, GLuint, GLuint);

void TransformFeedbackVaryings(GLuint, GLsizei, const GLint *, GLenum);

void GetTransformFeedbackVarying(GLuint, GLuint, GLint *);

void ClampColor(GLenum, GLenum);

void BeginConditionalRender(GLuint, GLenum);

void EndConditionalRender(void);

void VertexAttribI1i(GLuint, GLint);

void VertexAttribI2i(GLuint, GLint, GLint);

void VertexAttribI3i(GLuint, GLint, GLint, GLint);

void VertexAttribI4i(GLuint, GLint, GLint, GLint, GLint);

void VertexAttribI1ui(GLuint, GLuint);

void VertexAttribI2ui(GLuint, GLuint, GLuint);

void VertexAttribI3ui(GLuint, GLuint, GLuint, GLuint);

void VertexAttribI4ui(GLuint, GLuint, GLuint, GLuint, GLuint);

void VertexAttribI1iv(GLuint, const GLint *);

void VertexAttribI2iv(GLuint, const GLint *);

void VertexAttribI3iv(GLuint, const GLint *);

void VertexAttribI4iv(GLuint, const GLint *);

void VertexAttribI1uiv(GLuint, const GLuint *);

void VertexAttribI2uiv(GLuint, const GLuint *);

void VertexAttribI3uiv(GLuint, const GLuint *);

void VertexAttribI4uiv(GLuint, const GLuint *);

void VertexAttribI4bv(GLuint, const GLbyte *);

void VertexAttribI4sv(GLuint, const GLshort *);

void VertexAttribI4ubv(GLuint, const GLubyte *);

void VertexAttribI4usv(GLuint, const GLushort *);

void VertexAttribIPointer(GLuint, GLint, GLenum, GLsizei, const GLvoid *);

void GetVertexAttribIiv(GLuint, GLenum, GLint *);

void GetVertexAttribIuiv(GLuint, GLenum, GLuint *);

void GetUniformuiv(GLuint, GLint, GLuint *);

void BindFragDataLocation(GLuint, GLuint, const GLchar *);

GLint GetFragDataLocation(GLuint, const GLchar *);

void Uniform1ui(GLint, GLuint);

void Uniform2ui(GLint, GLuint, GLuint);

void Uniform3ui(GLint, GLuint, GLuint, GLuint);

void Uniform4ui(GLint, GLuint, GLuint, GLuint, GLuint);

void Uniform1uiv(GLint, GLsizei, const GLuint *);

void Uniform2uiv(GLint, GLsizei, const GLuint *);

void Uniform3uiv(GLint, GLsizei, const GLuint *);

void Uniform4uiv(GLint, GLsizei, const GLuint *);

void TexParameterIiv(GLenum, GLenum, const GLint *);

void TexParameterIuiv(GLenum, GLenum, const GLuint *);

void GetTexParameterIiv(GLenum, GLenum, GLint *);

void GetTexParameterIuiv(GLenum, GLenum, GLuint *);

void ClearBufferiv(GLenum, GLint, const GLint *);

void ClearBufferuiv(GLenum, GLint, const GLuint *);

void ClearBufferfv(GLenum, GLint, const GLfloat *);

void ClearBufferfi(GLenum, GLint, GLfloat, GLint);

const GLubyte * GetStringi(GLenum, GLuint);



void DrawArraysInstanced(GLenum, GLint, GLsizei, GLsizei);

void DrawElementsInstanced(GLenum, GLsizei, GLenum, const GLvoid *, GLsizei);

void TexBuffer(GLenum, GLenum, GLuint);

void PrimitiveRestartIndex(GLuint);


void glGetInteger64i_v(GLenum target, GLuint index, GLint64 *data);

void glGetBufferParameteri64v(GLenum target, GLenum pname, GLint64 *params);

void glProgramParameteri(GLuint program, GLenum pname, GLint value);

void glFramebufferTexture(GLenum target, GLenum attachment, GLuint texture, GLint level);





void ActiveTextureARB(GLenum);

void ClientActiveTextureARB(GLenum);

void MultiTexCoord1dARB(GLenum, GLdouble);

void MultiTexCoord1dvARB(GLenum, const GLdouble *);

void MultiTexCoord1fARB(GLenum, GLfloat);

void MultiTexCoord1fvARB(GLenum, const GLfloat *);

void MultiTexCoord1iARB(GLenum, GLint);

void MultiTexCoord1ivARB(GLenum, const GLint *);

void MultiTexCoord1sARB(GLenum, GLshort);

void MultiTexCoord1svARB(GLenum, const GLshort *);

void MultiTexCoord2dARB(GLenum, GLdouble, GLdouble);

void MultiTexCoord2dvARB(GLenum, const GLdouble *);

void MultiTexCoord2fARB(GLenum, GLfloat, GLfloat);

void MultiTexCoord2fvARB(GLenum, const GLfloat *);

void MultiTexCoord2iARB(GLenum, GLint, GLint);

void MultiTexCoord2ivARB(GLenum, const GLint *);