gl_ext_api.scm

        unsigned-char
        unsigned-char
        unsigned-char
        unsigned-char)))
  (begin
    (define GetBooleani_v
      (foreign-lambda
        void
        "GetBooleani_v"
        unsigned-integer
        unsigned-integer
        u8vector)))
  (begin
    (define GetIntegeri_v
      (foreign-lambda
        void
        "GetIntegeri_v"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define Enablei
      (foreign-lambda void "Enablei" unsigned-integer unsigned-integer)))
  (begin
    (define Disablei
      (foreign-lambda void "Disablei" unsigned-integer unsigned-integer)))
  (begin
    (define IsEnabledi
      (foreign-lambda
        unsigned-char
        "IsEnabledi"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define BeginTransformFeedback
      (foreign-lambda void "BeginTransformFeedback" unsigned-integer)))
  (begin
    (define EndTransformFeedback (foreign-lambda void "EndTransformFeedback")))
  (begin
    (define BindBufferRange
      (foreign-lambda
        void
        "BindBufferRange"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        integer)))
  (begin
    (define BindBufferBase
      (foreign-lambda
        void
        "BindBufferBase"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define TransformFeedbackVaryings
      (foreign-lambda
        void
        "TransformFeedbackVaryings"
        unsigned-integer
        unsigned-integer
        s32vector
        unsigned-integer)))
  (begin
    (define GetTransformFeedbackVarying
      (foreign-lambda
        void
        "GetTransformFeedbackVarying"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define ClampColor
      (foreign-lambda void "ClampColor" unsigned-integer unsigned-integer)))
  (begin
    (define BeginConditionalRender
      (foreign-lambda
        void
        "BeginConditionalRender"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define EndConditionalRender (foreign-lambda void "EndConditionalRender")))
  (begin
    (define VertexAttribI1i
      (foreign-lambda void "VertexAttribI1i" unsigned-integer integer)))
  (begin
    (define VertexAttribI2i
      (foreign-lambda
        void
        "VertexAttribI2i"
        unsigned-integer
        integer
        integer)))
  (begin
    (define VertexAttribI3i
      (foreign-lambda
        void
        "VertexAttribI3i"
        unsigned-integer
        integer
        integer
        integer)))
  (begin
    (define VertexAttribI4i
      (foreign-lambda
        void
        "VertexAttribI4i"
        unsigned-integer
        integer
        integer
        integer
        integer)))
  (begin
    (define VertexAttribI1ui
      (foreign-lambda
        void
        "VertexAttribI1ui"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define VertexAttribI2ui
      (foreign-lambda
        void
        "VertexAttribI2ui"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define VertexAttribI3ui
      (foreign-lambda
        void
        "VertexAttribI3ui"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define VertexAttribI4ui
      (foreign-lambda
        void
        "VertexAttribI4ui"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define VertexAttribI1iv
      (foreign-lambda void "VertexAttribI1iv" unsigned-integer s32vector)))
  (begin
    (define VertexAttribI2iv
      (foreign-lambda void "VertexAttribI2iv" unsigned-integer s32vector)))
  (begin
    (define VertexAttribI3iv
      (foreign-lambda void "VertexAttribI3iv" unsigned-integer s32vector)))
  (begin
    (define VertexAttribI4iv
      (foreign-lambda void "VertexAttribI4iv" unsigned-integer s32vector)))
  (begin
    (define VertexAttribI1uiv
      (foreign-lambda void "VertexAttribI1uiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttribI2uiv
      (foreign-lambda void "VertexAttribI2uiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttribI3uiv
      (foreign-lambda void "VertexAttribI3uiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttribI4uiv
      (foreign-lambda void "VertexAttribI4uiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttribI4bv
      (foreign-lambda void "VertexAttribI4bv" unsigned-integer c-string)))
  (begin
    (define VertexAttribI4sv
      (foreign-lambda void "VertexAttribI4sv" unsigned-integer s16vector)))
  (begin
    (define VertexAttribI4ubv
      (foreign-lambda void "VertexAttribI4ubv" unsigned-integer u8vector)))
  (begin
    (define VertexAttribI4usv
      (foreign-lambda void "VertexAttribI4usv" unsigned-integer u16vector)))
  (begin
    (define VertexAttribIPointer
      (foreign-lambda
        void
        "VertexAttribIPointer"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetVertexAttribIiv
      (foreign-lambda
        void
        "GetVertexAttribIiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetVertexAttribIuiv
      (foreign-lambda
        void
        "GetVertexAttribIuiv"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define GetUniformuiv
      (foreign-lambda
        void
        "GetUniformuiv"
        unsigned-integer
        integer
        u32vector)))
  (begin
    (define BindFragDataLocation
      (foreign-lambda
        void
        "BindFragDataLocation"
        unsigned-integer
        unsigned-integer
        c-string)))
  (begin
    (define GetFragDataLocation
      (foreign-lambda
        integer
        "GetFragDataLocation"
        unsigned-integer
        c-string)))
  (begin
    (define Uniform1ui
      (foreign-lambda void "Uniform1ui" integer unsigned-integer)))
  (begin
    (define Uniform2ui
      (foreign-lambda
        void
        "Uniform2ui"
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define Uniform3ui
      (foreign-lambda
        void
        "Uniform3ui"
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define Uniform4ui
      (foreign-lambda
        void
        "Uniform4ui"
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define Uniform1uiv
      (foreign-lambda void "Uniform1uiv" integer unsigned-integer u32vector)))
  (begin
    (define Uniform2uiv
      (foreign-lambda void "Uniform2uiv" integer unsigned-integer u32vector)))
  (begin
    (define Uniform3uiv
      (foreign-lambda void "Uniform3uiv" integer unsigned-integer u32vector)))
  (begin
    (define Uniform4uiv
      (foreign-lambda void "Uniform4uiv" integer unsigned-integer u32vector)))
  (begin
    (define TexParameterIiv
      (foreign-lambda
        void
        "TexParameterIiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define TexParameterIuiv
      (foreign-lambda
        void
        "TexParameterIuiv"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define GetTexParameterIiv
      (foreign-lambda
        void
        "GetTexParameterIiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetTexParameterIuiv
      (foreign-lambda
        void
        "GetTexParameterIuiv"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define ClearBufferiv
      (foreign-lambda
        void
        "ClearBufferiv"
        unsigned-integer
        integer
        s32vector)))
  (begin
    (define ClearBufferuiv
      (foreign-lambda
        void
        "ClearBufferuiv"
        unsigned-integer
        integer
        u32vector)))
  (begin
    (define ClearBufferfv
      (foreign-lambda
        void
        "ClearBufferfv"
        unsigned-integer
        integer
        f32vector)))
  (begin
    (define ClearBufferfi
      (foreign-lambda
        void
        "ClearBufferfi"
        unsigned-integer
        integer
        float
        integer)))
  (begin
    (define GetStringi
      (foreign-lambda
        (c-pointer (const unsigned-char))
        "GetStringi"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DrawArraysInstanced
      (foreign-lambda
        void
        "DrawArraysInstanced"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DrawElementsInstanced
      (foreign-lambda
        void
        "DrawElementsInstanced"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        unsigned-integer)))
  (begin
    (define TexBuffer
      (foreign-lambda
        void
        "TexBuffer"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define PrimitiveRestartIndex
      (foreign-lambda void "PrimitiveRestartIndex" unsigned-integer)))
  (begin
    (define glGetInteger64i_v
      (foreign-lambda
        void
        "glGetInteger64i_v"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define glGetBufferParameteri64v
      (foreign-lambda
        void
        "glGetBufferParameteri64v"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define glProgramParameteri
      (foreign-lambda
        void
        "glProgramParameteri"
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define glFramebufferTexture
      (foreign-lambda
        void
        "glFramebufferTexture"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define ActiveTextureARB
      (foreign-lambda void "ActiveTextureARB" unsigned-integer)))
  (begin
    (define ClientActiveTextureARB
      (foreign-lambda void "ClientActiveTextureARB" unsigned-integer)))
  (begin
    (define MultiTexCoord1dARB
      (foreign-lambda void "MultiTexCoord1dARB" unsigned-integer double)))
  (begin
    (define MultiTexCoord1dvARB
      (foreign-lambda void "MultiTexCoord1dvARB" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord1fARB
      (foreign-lambda void "MultiTexCoord1fARB" unsigned-integer float)))
  (begin
    (define MultiTexCoord1fvARB
      (foreign-lambda void "MultiTexCoord1fvARB" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord1iARB
      (foreign-lambda void "MultiTexCoord1iARB" unsigned-integer integer)))
  (begin
    (define MultiTexCoord1ivARB
      (foreign-lambda void "MultiTexCoord1ivARB" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord1sARB
      (foreign-lambda void "MultiTexCoord1sARB" unsigned-integer short)))
  (begin
    (define MultiTexCoord1svARB
      (foreign-lambda void "MultiTexCoord1svARB" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord2dARB
      (foreign-lambda
        void
        "MultiTexCoord2dARB"
        unsigned-integer
        double
        double)))
  (begin
    (define MultiTexCoord2dvARB
      (foreign-lambda void "MultiTexCoord2dvARB" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord2fARB
      (foreign-lambda void "MultiTexCoord2fARB" unsigned-integer float float)))
  (begin
    (define MultiTexCoord2fvARB
      (foreign-lambda void "MultiTexCoord2fvARB" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord2iARB
      (foreign-lambda
        void
        "MultiTexCoord2iARB"
        unsigned-integer
        integer
        integer)))
  (begin
    (define MultiTexCoord2ivARB
      (foreign-lambda void "MultiTexCoord2ivARB" unsigned-integer s32vector)))
  (begin
